fix gap between menu items

--- a/themes/ESGI-theme/src/css/components/_header.scss
+++ b/themes/ESGI-theme/src/css/components/_header.scss
@@ -123,7 +123,7 @@
 		}
 
 		.mobile-nav-content {
-			padding: 1.5rem 0 1.5rem 0;
+			padding: 1.5rem 0 3rem 0;
 			display: flex;
 			flex-direction: column;
 			gap: 2rem;
@@ -245,7 +245,7 @@
 				padding: 0 !important;
 				display: flex;
 				flex-direction: column;
-				gap: 0; // consistent gap 
+				gap: 0.7rem; // gap between menu items 
 
 				// desktop: right-align text
 				@media (min-width: 769px) {
