--- a/themes/ESGI-theme/style.css
+++ b/themes/ESGI-theme/style.css
@@ -4926,7 +4926,7 @@ section:last-child {
   opacity: 0.7;
 }
 .site-header .mobile-navigation .mobile-nav-content {
-  padding: 1.5rem 0 1.5rem 0;
+  padding: 1.5rem 0 3rem 0;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -5036,7 +5036,7 @@ section:last-child {
   padding: 0 !important;
   display: flex;
   flex-direction: column;
-  gap: 0;
+  gap: 0.7rem;
 }
 @media (min-width: 769px) {
   .site-header .mobile-navigation .mobile-nav-menu .mobile-menu-list {
